--- a/css/style.css
+++ b/css/style.css
@@ -195,54 +195,69 @@ p{
 }
 
 
-/* CARDS PARA LINEAMIENTOS Y RECURSOS (propuesta) */
- 
-.containers{
-    width: 100%;
-    display: flex;
-    max-width: 1100px;
-  
+ /* CARDS PARA LINEAMIENTOS Y RECURSOS (propuesta) */
+
+ .containers{
+    display: flex;   
+    flex-wrap: wrap; 
+    justify-content: space-between;
 }
-.containers .card {
-  width: 100%;
+
+.card {
+  border: 1px;
+  /* width: 250px; */
   margin: 20px;
-  border-radius: 6px;
+  flex-basis:calc(45% - 1em);
+  border-radius: 15px;
   overflow: hidden;
   background: #fff;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-  cursor: default;
   transition: all 400ms ease;
-
-
+  position: relative;
 }
+
 .card:hover {
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
   transform: translateY(-3%);
-   
+    /*opacity:1.0;
+    /*filter: grayscale(0);
+    transform: scale(1.3);*/
+}
+.card img{
+  height: auto;
+  max-width: 100%;
+  width: 100%;
+  
 }
 
-.card img{
-  width: 100%;
-  height: 250px;
-}
-.texto-encima{
-  padding: 15px;
-  text-align: justify ;
-}
-.containers .button {
-    text-decoration: none;
-    padding: 10px;
-    font-weight: 600;
+
+ 
+.card .button {
+    align-items: center;
+    bottom: 1.75em;
+    display: flex;
+    height: 3.5em;
+    justify-content: space-between;
+    position: absolute;
+    width: 100%;
+    /* text-decoration: none;
+    padding: 5px;
     font-size: 20px;
     color: #ffffff;
     background-color: var(--main);
     border-radius: 6px;
-    border: 2px solid var(--secondary);
-  }
-.containers .button:hover{
+    border: 2px solid var(--secondary); */
+}
+
+.card .posicion{
+  text-align: right;
+}
+
+.card .button:hover{
     color: var(--secondary);
     background-color: var(--bgLight);
 }
+  
 /* ET */
 
 /*! ============= Categorias ============= */
