--- a/css/style.css
+++ b/css/style.css
@@ -204,11 +204,10 @@ p{
 }
 
 .card {
-  border: 1px;
-  /* width: 250px; */
   margin: 20px;
   flex-basis:calc(45% - 1em);
-  border-radius: 15px;
+  border-radius: 10px;
+  border: 1px solid var(--secondary);  
   overflow: hidden;
   background: #fff;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
@@ -223,6 +222,7 @@ p{
     /*filter: grayscale(0);
     transform: scale(1.3);*/
 }
+
 .card img{
   height: auto;
   max-width: 100%;
@@ -230,31 +230,46 @@ p{
   
 }
 
-.card .button {
+.tema{  
+    padding: 10px;
+    
+}
+
+.descripcion{
+    padding: 10px;
+    margin: 0.2em 0 4em;
+}
+
+.card .posicion {
     align-items: center;
     bottom: 1.75em;
     display: flex;
     height: 3.5em;
-    justify-content: space-between;
+    justify-content: flex-end;
     position: absolute;
+    padding: 0px 5px;
     width: 100%;
-    /* text-decoration: none;
+}
+
+.button{
+    position: absolute; 
+    text-decoration: none;
     padding: 5px;
     font-size: 20px;
     color: #ffffff;
     background-color: var(--main);
     border-radius: 6px;
-    border: 2px solid var(--secondary); */
+    border: 2px solid var(--secondary); 
 }
 
-.card .posicion{
-  text-align: right;
+.button:hover{
+
+
 }
 
-.card .button:hover{
-    color: var(--secondary);
-    background-color: var(--bgLight);
-}
+
+
+
   
 /* ET */
 
