--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,15 @@
 --emphasisLight: hsla(var(--emphasisBase),40%);
 
 
---contrast: hsla(194, 98%, 33%);
+--contrastBase: 194, 98%;
+--contrast: hsla(var(--contrastBase), 33%);
+--contrastDark: hsla(var(--contrastBase),15%);
+--contrastLight: hsla(var(--contrastBase),60%);
 
---bgLight: hsla(174, 38%, 95%);
-
-/* RGB */
---main: rgba(2, 138, 162);
---secondary: rgba(77, 77, 84);
---bgLight: rgba(237, 247, 246);
---emphasis: rgba(105, 180, 45);
---contrast: rgba(2, 127, 165);
+--bgLightBase:174, 38%;
+--bgLight: hsla(var(--bgLightBase), 95%);
+--bgLightDark: hsla(var(--bgLightBase),20%);
+--bgLightLight: hsla(var(--bgLightBase),70%);
 
 
 /* Fonts */
@@ -218,9 +217,6 @@ p{
 .card:hover {
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
   transform: translateY(-3%);
-    /*opacity:1.0;
-    /*filter: grayscale(0);
-    transform: scale(1.3);*/
 }
 
 .card img{
@@ -266,23 +262,19 @@ p{
 
 
 }
-
-
-
-
   
-/* ET */
+/* EQUIPO DE TRABAJO */
 
-/*! ============= Categorias ============= */
+/*! ---------------------- TITULOS ---------------------- */
 
-.categorias {
+.topics {
 	display: table;
     margin: 0 auto;
 	margin-bottom: 50px;
     text-align: center;
 }
 
-.categoria {
+.topic {
     display:table-cell;
     width: auto;
     min-height: 47px;
@@ -294,19 +286,19 @@ p{
     margin-right: 50px;
 }
 
-.categoria:hover {
+.topic:hover {
 	box-shadow: var(--emphasisDark);
 	color: var(--emphasisDark);
 }
 
-.categoria.activa {
+.topic.activa {
    
 	border-bottom: 2px solid var(--emphasisDark);
 	color: #000;
 }
 
 
-/*! ============= Contenedor  ============= */
+/*! ----------------------Contenedor---------------------- */
 .contenedor-preguntas {
 	display: none;
 	grid-template-columns: 1fr;
@@ -336,7 +328,7 @@ p{
 	border: 2px solid var(--emphasisDark);
 }
 
-/*! ============= Información  ============= */
+/*! ----------------------Información----------------------*/
 
 
 .pregunta {
@@ -379,8 +371,57 @@ p{
     text-align: justify;
 } 
 
+/* ----------------------IDENTIDAD GRAFICA----------------------*/
+.card-ig {
+    max-width: 350px;
+    margin: 150px auto 0;
+    background-color: var(--secondaryLight);
+    box-shadow: 0 10px 90px #00000024;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 30px;
+}
 
-/* FOOTER */
+.card-ig .card-ig-header {
+    position: relative;
+    height: 48px;
+}
+.card-ig .card-ig-header .profile-img {
+    width: 130px;
+    height: 130px;
+    border-radius: 1000px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 6px solid transparent;
+    background-image: linear-gradient(to bottom right,var(--contrast) 0%,var(--main) 0% ,var(--emphasis) 100%);
+    box-shadow: 0 0 12px var(--secondaryDark);
+}
+
+.card-ig .card-ig-body {
+    padding: 10px 40px;
+}
+
+.card-ig .card-ig-body .name {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+    color: var(--emphasisDark);
+}
+
+.card-ig .card-ig-body .description {
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.card-ig .card-ig-body  .job {
+    text-align: center;
+    font-size: 14px;
+    color: var(--mainDark);
+}
+
+/* ----------------------FOOTER---------------------- */
  footer{
 	background:#EDF7F6;
     border-top: 2px solid #3e3e3e;
