--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,14 @@ h3{
     position: relative;
 	text-align: left;
 }
+
+h4{
+    font-size: calc(0.5em + 1.3vw);
+    font-weight: 300;
+    position: relative;
+	text-align: center;
+}
+
 h3:before {
     position: absolute;
 	background: linear-gradient(to right, var(--contrast) 0%,var(--emphasis) 100%);
@@ -209,13 +217,11 @@ p{
   border: 1px solid var(--secondary);  
   overflow: hidden;
   background: #fff;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
   transition: all 400ms ease;
   position: relative;
 }
 
 .card:hover {
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
   transform: translateY(-3%);
 }
 
@@ -227,7 +233,7 @@ p{
 }
 
 .tema{  
-    padding: 10px;
+    padding: 10px; 
     
 }
 
@@ -250,17 +256,18 @@ p{
 .button{
     position: absolute; 
     text-decoration: none;
-    padding: 5px;
+    padding: 10px;
     font-size: 20px;
-    color: #ffffff;
+    color: #FFF;
     background-color: var(--main);
-    border-radius: 6px;
-    border: 2px solid var(--secondary); 
+    border-radius: 3px;
 }
 
-.button:hover{
-
-
+.button:hover{  
+    background: var(--secondaryLight);
+    color: #000;
+    border: 1px solid var(--secondary);
+    
 }
   
 /* EQUIPO DE TRABAJO */
